kubernetes/phpmyadmin/phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: phpmyadmin
  name: phpmyadmin-deployment
  namespace: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  phpmyadmin
  strategy: {}
  template:
    metadata:
      labels:
        app:  phpmyadmin
    spec:
      containers:
        - image: phpmyadmin/phpmyadmin
          name:  phpmyadmin-pod
          imagePullPolicy: IfNotPresent  
          ports:
            - containerPort: 80
          resources: {}
status: {}
