kubernetes/phpmyadmin/phpmyadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-http-ingress
  namespace: phpmyadmin
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - phpmyadmin.zanamira83.info
    secretName: phpmyadmin-tls
  ingressClassName: nginx
  rules:
  - host: phpmyadmin.zanamira83.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
